// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DarkMode Dropdown component renders dark mode dropdown 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-1:active:before,
.emotion-1:hover:before,
.emotion-1:focus:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:active,
.emotion-1:hover {
  color: #001E2B;
}

.emotion-1:active:before,
.emotion-1:hover:before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1:focus-visible {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-1:focus-visible:before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Sun Icon"
          class=""
          fill="none"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.24 10.83a.996.996 0 1 0-1.41 1.41l.71.71a.996.996 0 1 0 1.41-1.41l-.71-.71ZM8 12c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1s1-.45 1-1v-1c0-.55-.45-1-1-1ZM8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM14 7h-1c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1s-.45-1-1-1ZM3.76 10.83l-.71.71a.996.996 0 1 0 1.41 1.41l.71-.71a.996.996 0 1 0-1.41-1.41ZM8 4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1c0 .55.45 1 1 1ZM3.76 5.17a.996.996 0 1 0 1.41-1.41l-.71-.71a.996.996 0 1 0-1.41 1.41l.71.71ZM4 8c0-.55-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1ZM12.24 5.17l.71-.71a.996.996 0 1 0-1.41-1.41l-.71.71a.996.996 0 1 0 1.41 1.41Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`DarkMode Dropdown component renders dark mode dropdown 2`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-1:active:before,
.emotion-1:hover:before,
.emotion-1:focus:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:active,
.emotion-1:hover {
  color: #001E2B;
}

.emotion-1:active:before,
.emotion-1:hover:before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1:focus-visible {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-1:focus-visible:before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  display: none;
}

.emotion-4 {
  position: absolute;
  -webkit-transition: -webkit-transform 150ms ease-in-out,opacity 150ms ease-in-out;
  transition: transform 150ms ease-in-out,opacity 150ms ease-in-out;
  opacity: 0;
  left: 0px;
  top: 6px;
  transform-origin: left top;
  -webkit-transform: translate3d(0, -6px, 0) scale(0.8);
  -moz-transform: translate3d(0, -6px, 0) scale(0.8);
  -ms-transform: translate3d(0, -6px, 0) scale(0.8);
  transform: translate3d(0, -6px, 0) scale(0.8);
}

.emotion-5 {
  width: 210px;
  border-radius: 12px;
  overflow: auto;
  padding: 14px 0;
  background-color: #001E2B;
  border: 1px solid #001E2B;
  max-height: 344px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-top: 8px;
}

.emotion-6 {
  overflow: auto;
  list-style: none;
  margin-block-start: 0px;
  margin-block-end: 0px;
  -webkit-padding-start: 0px;
  padding-inline-start: 0px;
  padding: 0px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: unset;
  padding-left: 20px;
  padding-right: 20px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: none;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #FFFFFF;
  background-color: #001E2B;
  min-height: 36px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #001E2B;
}

.emotion-7:focus {
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:before {
  content: '';
  position: absolute;
  width: 4px;
  left: 0px;
  border-radius: 0 4px 4px 0;
  background-color: transparent;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:hover,
.emotion-7:active {
  background-color: #1C2D38;
}

.emotion-7:before {
  height: 22px;
}

.emotion-7:before {
  background-color: #00ED64;
}

.emotion-7:hover {
  color: #00ED64;
}

.emotion-7:hover:before {
  background-color: #00ED64;
}

.emotion-7:focus-visible {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0C2657;
  color: #FFFFFF;
}

.emotion-7:focus-visible:before {
  background-color: #0498EC;
}

.emotion-7::-moz-focus-inner {
  border: 0;
}

.emotion-8 {
  margin-right: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
  color: #00ED64;
}

.lg-ui-menu-item-container-0000:focus-visible .emotion-8 {
  color: #E1F7FF;
}

.emotion-9 {
  width: 100%;
  overflow: hidden;
  padding: 2px 0;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  font-size: 13px;
  font-weight: 500;
  font-weight: 700;
  color: #00ED64;
}

.emotion-10:after {
  content: attr(data-text);
  height: 0;
  font-weight: 700;
  visibility: hidden;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.emotion-10 .lg-ui-menu-item-container-0000:not(:disabled):hover .emotion-10 .lg-ui-menu-item-container-0000 {
  font-weight: 700;
}

.emotion-10 .lg-ui-menu-item-container-0000:not(:disabled):hover .emotion-10 .lg-ui-menu-item-container-0000 {
  color: #00ED64;
}

.lg-ui-menu-item-container-0000:focus-visible .emotion-10 {
  color: #E1F7FF;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: unset;
  padding-left: 20px;
  padding-right: 20px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 13px;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border: none;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #FFFFFF;
  background-color: #001E2B;
  min-height: 36px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:focus {
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:before {
  content: '';
  position: absolute;
  width: 4px;
  left: 0px;
  border-radius: 0 4px 4px 0;
  background-color: transparent;
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11:hover,
.emotion-11:active {
  background-color: #1C2D38;
}

.emotion-11:before {
  height: 22px;
}

.emotion-11:focus-visible {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0C2657;
  color: #FFFFFF;
}

.emotion-11:focus-visible:before {
  background-color: #0498EC;
}

.emotion-11::-moz-focus-inner {
  border: 0;
}

.emotion-12 {
  margin-right: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
}

.lg-ui-menu-item-container-0000:focus-visible .emotion-12 {
  color: #E1F7FF;
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  font-size: 13px;
  font-weight: 500;
}

.emotion-14:after {
  content: attr(data-text);
  height: 0;
  font-weight: 700;
  visibility: hidden;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.emotion-14 .lg-ui-menu-item-container-0000:not(:disabled):hover .emotion-14 .lg-ui-menu-item-container-0000 {
  font-weight: 700;
}

.lg-ui-menu-item-container-0000:focus-visible .emotion-14 {
  color: #E1F7FF;
}

.emotion-16 {
  margin-right: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #889397;
}

.lg-ui-menu-item-container-0000:focus-visible .emotion-16 {
  color: #E1F7FF;
}

.emotion-16 svg {
  margin-right: 16px;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Sun Icon"
          class=""
          fill="none"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.24 10.83a.996.996 0 1 0-1.41 1.41l.71.71a.996.996 0 1 0 1.41-1.41l-.71-.71ZM8 12c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1s1-.45 1-1v-1c0-.55-.45-1-1-1ZM8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM14 7h-1c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1s-.45-1-1-1ZM3.76 10.83l-.71.71a.996.996 0 1 0 1.41 1.41l.71-.71a.996.996 0 1 0-1.41-1.41ZM8 4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1c0 .55.45 1 1 1ZM3.76 5.17a.996.996 0 1 0 1.41-1.41l-.71-.71a.996.996 0 1 0-1.41 1.41l.71.71ZM4 8c0-.55-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1ZM12.24 5.17l.71-.71a.996.996 0 1 0-1.41-1.41l-.71.71a.996.996 0 1 0 1.41 1.41Z"
            fill="currentColor"
          />
        </svg>
        <span
          class="emotion-3"
        />
      </div>
    </button>
    <div
      class="emotion-4"
    >
      <div
        class="lg-ui-popover-content-0000"
      >
        <div
          class="emotion-5"
        >
          <ul
            class="emotion-6"
            role="menu"
          >
            <li
              role="none"
            >
              <button
                aria-current="true"
                aria-disabled="false"
                class="lg-ui-menu-item-container-0000 emotion-7"
                role="menuitem"
                tabindex="-1"
              >
                <svg
                  alt=""
                  aria-hidden="true"
                  class="emotion-8"
                  fill="none"
                  height="20"
                  role="presentation"
                  viewBox="0 0 16 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.24 10.83a.996.996 0 1 0-1.41 1.41l.71.71a.996.996 0 1 0 1.41-1.41l-.71-.71ZM8 12c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1s1-.45 1-1v-1c0-.55-.45-1-1-1ZM8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM14 7h-1c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1s-.45-1-1-1ZM3.76 10.83l-.71.71a.996.996 0 1 0 1.41 1.41l.71-.71a.996.996 0 1 0-1.41-1.41ZM8 4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1c0 .55.45 1 1 1ZM3.76 5.17a.996.996 0 1 0 1.41-1.41l-.71-.71a.996.996 0 1 0-1.41 1.41l.71.71ZM4 8c0-.55-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1ZM12.24 5.17l.71-.71a.996.996 0 1 0-1.41-1.41l-.71.71a.996.996 0 1 0 1.41 1.41Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-10"
                    data-text="Light"
                  >
                    Light
                  </div>
                </div>
              </button>
            </li>
            <li
              role="none"
            >
              <button
                aria-current="false"
                aria-disabled="false"
                class="lg-ui-menu-item-container-0000 emotion-11"
                role="menuitem"
                tabindex="-1"
              >
                <svg
                  alt=""
                  aria-hidden="true"
                  class="emotion-12"
                  fill="none"
                  height="20"
                  role="presentation"
                  viewBox="0 0 16 16"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.787 10.074a.713.713 0 0 0-.864-.116c-.125.077-.26.135-.394.192-1.766.72-3.888-.21-4.704-2.208-.73-1.795-.086-3.734 1.344-4.617a.72.72 0 0 0 .317-.807A.709.709 0 0 0 8.795 2H8.67c-3.312 0-6 2.688-6 6s2.688 6 6 6a6.003 6.003 0 0 0 5.232-3.062.715.715 0 0 0-.125-.864h.01Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-14"
                    data-text="Dark"
                  >
                    Dark
                  </div>
                </div>
              </button>
            </li>
            <li
              role="none"
            >
              <button
                aria-current="false"
                aria-disabled="false"
                class="lg-ui-menu-item-container-0000 emotion-11"
                role="menuitem"
                tabindex="-1"
              >
                <svg
                  class="emotion-16"
                  height="20"
                  id="Layer_1"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="currentColor"
                  >
                    <path
                      d="M12,18.92c-.29,0-.55.11-.76.32-.21.21-.32.46-.32.76v2c0,.29.11.55.32.76.21.21.46.32.76.32s.55-.11.76-.32c.21-.21.32-.46.32-.76v-2c0-.29-.11-.55-.32-.76-.21-.21-.46-.32-.76-.32Z"
                    />
                    <path
                      d="M5.59,7.1c.22.21.48.31.77.32.29,0,.54-.1.74-.32.21-.22.31-.47.31-.76,0-.29-.1-.54-.31-.76l-1.06-1.07c-.21-.22-.46-.33-.76-.32-.3,0-.55.12-.76.34-.21.22-.32.48-.33.78,0,.29.1.54.32.75l1.08,1.05Z"
                    />
                    <path
                      d="M5.07,12c0-.29-.11-.55-.32-.76-.21-.21-.46-.32-.76-.32H2c-.29,0-.55.11-.76.32-.21.21-.32.46-.32.76s.11.55.32.76c.21.21.46.32.76.32h2c.29,0,.55-.11.76-.32.21-.21.32-.46.32-.76Z"
                    />
                    <path
                      d="M6.35,16.59c-.29,0-.54.11-.76.31l-1.08,1.06c-.22.21-.33.46-.32.76s.12.55.34.76c.22.2.48.31.78.32s.54-.09.75-.31l1.04-1.08c.2-.22.31-.48.32-.77.01-.29-.09-.54-.31-.74-.22-.21-.47-.31-.76-.31Z"
                    />
                    <path
                      d="M15,14.27c-1.48,0-2.73-.51-3.74-1.52-1.02-1.02-1.53-2.26-1.53-3.74,0-.53.09-1.02.23-1.5-.53.24-1.01.57-1.46,1.01-.96.96-1.44,2.13-1.44,3.49s.48,2.53,1.44,3.49c.96.96,2.13,1.44,3.49,1.44s2.53-.48,3.49-1.44c.44-.44.77-.93,1.01-1.46-.48.14-.97.23-1.5.23Z"
                    />
                    <path
                      d="M18.41,16.9c-.22-.2-.48-.31-.77-.32-.29-.01-.54.09-.74.31-.21.22-.31.47-.31.76,0,.29.11.54.31.76l1.06,1.08c.21.22.46.33.76.32.3,0,.55-.12.76-.34.21-.22.32-.48.33-.78,0-.29-.1-.54-.32-.75l-1.07-1.04Z"
                    />
                  </g>
                  <g>
                    <path
                      d="M16.77,12.23c-1.31,0-2.41-.45-3.3-1.34-.9-.9-1.35-2-1.35-3.3,0-1.12.36-2.12,1.08-2.99.72-.88,1.65-1.4,2.8-1.59.15-.03.28-.03.38,0,.11.03.19.09.25.17.06.08.1.18.1.3,0,.12-.03.25-.09.4-.1.2-.17.41-.23.62s-.08.44-.08.67c0,.79.28,1.47.84,2.03.56.56,1.24.84,2.03.84.23,0,.46-.03.68-.08.22-.05.43-.13.62-.22.14-.06.27-.09.39-.09.12,0,.22.03.29.09.08.06.14.13.17.24.03.1.03.23,0,.38-.17,1.11-.69,2.04-1.56,2.78-.87.74-1.88,1.11-3.02,1.11Z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-14"
                    data-text="System"
                  >
                    System
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DarkMode Dropdown component updates dark mode when selecting a different option 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #C1C7C6;
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1:before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-1:active:before,
.emotion-1:hover:before,
.emotion-1:focus:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:active,
.emotion-1:hover {
  color: #F9FBFA;
}

.emotion-1:active:before,
.emotion-1:hover:before {
  background-color: rgba(232,237,235,0.1);
}

.emotion-1:focus-visible {
  color: #F9FBFA;
  box-shadow: 0 0 0 2px #001E2B,0 0 0 4px #0498EC;
}

.emotion-1:focus-visible:before {
  background-color: rgba(232,237,235,0.1);
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1"
      tabindex="0"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-label="Moon Icon"
          class=""
          fill="none"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.787 10.074a.713.713 0 0 0-.864-.116c-.125.077-.26.135-.394.192-1.766.72-3.888-.21-4.704-2.208-.73-1.795-.086-3.734 1.344-4.617a.72.72 0 0 0 .317-.807A.709.709 0 0 0 8.795 2H8.67c-3.312 0-6 2.688-6 6s2.688 6 6 6a6.003 6.003 0 0 0 5.232-3.062.715.715 0 0 0-.125-.864h.01Z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
